<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <TextView
        android:id="@+id/textViewFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sigin"
        android:textColor="@color/purple"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmailLogin"
        android:layout_marginTop="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textViewFavorite"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPasswordLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password_hint"
        app:hintTextColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/ic_password"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmailLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPasswordLogin"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        style="@style/button"
        android:layout_width="312dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:paddingVertical="10dp"
        android:text="@string/sigin"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password"
        app:layout_constraintStart_toStartOf="@+id/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/registration"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/signInButton"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_login"
        android:layout_width="347dp"
        android:layout_height="169dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        style="@style/button"
        android:layout_width="314dp"
        android:layout_height="59dp"
        android:layout_marginTop="15dp"
        android:paddingVertical="10dp"
        android:text="@string/continued"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>