<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <TextView
        android:id="@+id/textView4"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="245dp"
        android:layout_height="187dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo_register"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/inputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/registerLogo"
        app:layout_constraintStart_toStartOf="@+id/registerLogo"
        app:layout_constraintTop_toBottomOf="@+id/registerLogo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="5dp"
        app:boxStrokeWidth="0dp"
        android:hint="@string/email_hint"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/margin_sides_editText"
        android:layout_marginEnd="@dimen/margin_sides_editText"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutName"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutName"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:hintTextColor="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/margin_sides_editText"
        android:layout_marginEnd="@dimen/margin_sides_editText"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="5dp"
        app:boxStrokeWidth="0dp"
        android:hint="@string/confirm_password_hint"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/margin_sides_editText"
        android:layout_marginEnd="@dimen/margin_sides_editText"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        android:id="@+id/registerButton"
        style="@style/button"
        android:layout_width="314dp"
        android:layout_height="59dp"
        android:paddingVertical="10dp"
        android:text="@string/registr"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>