<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <TextView
        android:id="@+id/textView7"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="30dp"
        android:id="@+id/inputLayoutLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/black"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="305dp"
        android:layout_height="61dp"
        android:layout_marginTop="320dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Нажмите кнопку Потвердить, чтобы получить пароль по электронной почте."
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutLastName"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutLastName" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        android:id="@+id/registerButton"
        style="@style/button"
        android:layout_width="314dp"
        android:layout_height="59dp"
        android:paddingVertical="10dp"
        android:text="@string/сonfirm"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:backgroundTint="@color/gray"/>
</androidx.constraintlayout.widget.ConstraintLayout>